 *
 *  @author PrestaShop SA <contact@prestashop.com>
 *  @author Quadra Informatique <modules@quadra-informatique.fr>
 *  @copyright  2007-2014 PrestaShop SA / 1997-2014 Quadra Informatique
 *  @license    http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
 *  International Registered Trademark & Property of PrestaShop SA
 */
 2.9.21 :
 - fix for redirect when rewritting is not setting
 
 2.9.20 :
 - Bug fix for calling API La poste in SSL for prestashop  1.5 and >
 
2.9.19 :
- Add 3 new fields in table deliveries_info : lotacheminement, distributionsort, versionplantri

2.9.16 :
- Force SSL when SSL on all pages is actived
- Enabled field TTC on translation
- Minor visual improvement in back office order in 1.6

2.9.15 :
- Switch ceaddress4 to ceaddress2 in validation.php for printing
- Adding check validatity siret number

2.9.14 :
- Siret number is now mandatory for new user
- For old user siret number will be asked
- encoding detection fixed on validation.php

2.9.13 :
- Fix bug gift and gif message on fancy box mode
- Fix bug on trader compnay name encoding
- adding at least one phone number on table socolissimo delivery

2.9.12 :
- Fix bug free cost for CC carrier
- Fix bug redirection to api mobile

2.9.8 :
- Fix message notice with range on module page
- Fix message error during checking step when tradename company have accentued char
 
Socolissimo 2.9.6 :
- Some Coding standard prestashop
- Fix bug OPC 1.6 themes

Socolissimo
2.8.5 :

- Add new Carrier for Seller Cost
- This carrier is configurable like normal Carrier to allow price/weight bracket
- It will be use in place of socolissimo if seller relay point is selected
- It wont appeare in front office, and we recommanded to desactived it once configurated

- seller cost in back office deleted, replaced by activation/desactivation seller cost carrier
- Overcost for belgium now setting in HT , the amount in TTC visible for information.
- bug fix rounded amount in front Office