@@ -24,7 +24,9 @@
  *  International Registered Trademark & Property of PrestaShop SA
  */
  2.9.21 :
- - fix for redirect when rewritting is not setting
+ - fix for redirect in fancybox mode
+ - fix install for multishop
+ - change api url to automatic settings for ssl if needed
  
  2.9.20 :
  - Bug fix for calling API La poste in SSL for prestashop  1.5 and >
